pagestyle.css
body {
  background-color: rgb(255, 255, 255);
  padding: 1%;
}

header {
  margin : 10px;
  text-align: center;
  font-size: 3em;
  font-family: 'Noto Sans KR', sans-serif;
  border: solid black;
  width: 40%;
}

.column {
  display: inline-block;
  vertical-align: top;
  border: solid black;
  padding: 10px;
  text-align: left;
}

.body_part {
  display: inline-block;
  vertical-align: top;
  font-family: 'Noto Sans KR', sans-serif;
}

h1 {
  font-family: 'Noto Sans KR', sans-serif;
  font-size : 1.5em;
  text-align: center;
}

h2 {
  font-family: 'Noto Sans KR', sans-serif;
  font-size : 1em;
}

